fix: use native build as default for docker